--- a/index.html
+++ b/index.html
@@ -1,119 +1,3 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-<meta charset="UTF-8">
-<title>Pote préféré</title>
-
-<style>
-body {
-    margin: 0;
-    height: 100vh;
-    background: #f5f0e6;
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    color: #5a3e2b;
-}
-
-.container {
-    background: #e8dcc9;
-    padding: 40px;
-    border-radius: 15px;
-    text-align: center;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.25);
-    position: relative;
-}
-
-.buttons {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-}
-
-button {
-    padding: 12px 25px;
-    border-radius: 30px;
-    border: none;
-    font-size: 16px;
-    cursor: pointer;
-    transition: transform 0.3s ease, opacity 0.3s ease;
-}
-
-#yesBtn {
-    background: #8b5e3c;
-    color: white;
-}
-
-#noBtn {
-    background: #c9a77d;
-    color: #5a3e2b;
-    position: relative;
-}
-
-.loading {
-    width: 0;
-    height: 8px;
-    background: #8b5e3c;
-    margin: 20px auto;
-    border-radius: 5px;
-    display: none;
-}
-
-.arrow {
-    position: absolute;
-    top: -40px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 30px;
-    display: none;
-}
-
-#subtext {
-    font-size: 14px;
-    opacity: 0.75;
-    margin-top: 8px;
-}
-
-.confetti {
-    position: fixed;
-    width: 10px;
-    height: 10px;
-    animation: fall 3s linear forwards;
-}
-
-@keyframes fall {
-    from { transform: translateY(-10px) rotate(0deg); opacity: 1; }
-    to { transform: translateY(100vh) rotate(360deg); opacity: 0; }
-}
-
-@keyframes pulse {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.08); }
-    100% { transform: scale(1); }
-}
-</style>
-</head>
-
-<body>
-
-<div class="container" id="box">
-    <h1 id="title">je suis ton pote préféré hein ?</h1>
-    <p id="subtext">Sois honnête.</p>
-    <p id="counter" style="font-size:14px;opacity:0.7;">Tentatives sur Non : 0</p>
-
-    <div class="arrow" id="arrow">⬇️</div>
-
-    <div class="buttons" id="buttons">
-        <button id="yesBtn">Oui</button>
-        <button id="noBtn">Non</button>
-    </div>
-
-    <div class="loading" id="loading"></div>
-</div>
-
 <script>
 const noBtn = document.getElementById("noBtn");
 const yesBtn = document.getElementById("yesBtn");
@@ -126,6 +10,7 @@ let noCount = 0;
 let activated = false;
 let removedOnce = false;
 let yesScale = 1;
+let canFlee = true;
 
 const subtexts = [
     "Sois honnête.",
@@ -159,34 +44,82 @@ function growYes() {
     }
 }
 
-document.addEventListener("mousemove", (e) => {
-    if (!activated) return;
-
-    const rect = noBtn.getBoundingClientRect();
-    const d = Math.hypot(
-        e.clientX - (rect.left + rect.width / 2),
-        e.clientY - (rect.top + rect.height / 2)
-    );
-
-    if (d < 120) fleeNo();
-});
-
 noBtn.addEventListener("mouseenter", () => {
     if (!activated) {
         activated = true;
         noBtn.style.position = "fixed";
     }
+    fleeNo();
 });
 
 noBtn.addEventListener("click", fleeNo);
 
 function fleeNo() {
+    if (!canFlee) return;
+    canFlee = false;
+
     noCount++;
     updateUI();
     growYes();
 
     if (navigator.vibrate) navigator.vibrate(60);
 
-    // DISPARITION UNE SEULE FOIS
+    // Disparition UNE SEULE FOIS
     if (noCount === 4 && !removedOnce) {
         removedOnce = true;
+        noBtn.style.opacity = "0";
+        setTimeout(() => {
+            noBtn.style.opacity = "1";
+            noBtn.style.transform = "scale(0.8)";
+            noBtn.textContent = "…";
+        }, 600);
+    } else {
+        const maxX = window.innerWidth - noBtn.offsetWidth;
+        const maxY = window.innerHeight - noBtn.offsetHeight;
+
+        noBtn.style.left = Math.random() * maxX + "px";
+        noBtn.style.top = Math.random() * maxY + "px";
+
+        if (noCount <= noTexts.length) {
+            noBtn.textContent = noTexts[noCount - 1];
+        }
+    }
+
+    if (noCount === 3) arrow.style.display = "block";
+
+    // Cooldown anti-chaos
+    setTimeout(() => {
+        canFlee = true;
+    }, 300);
+}
+
+// Bouton OUI (inchangé et FIABLE)
+yesBtn.addEventListener("click", () => {
+    document.getElementById("buttons").style.display = "none";
+    document.getElementById("loading").style.display = "block";
+    document.getElementById("loading").style.width = "0";
+
+    let p = 0;
+    const i = setInterval(() => {
+        p++;
+        document.getElementById("loading").style.width = p + "%";
+        if (p >= 100) {
+            clearInterval(i);
+            document.getElementById("loading").style.display = "none";
+            document.getElementById("title").textContent = "OUAIS ! Je le savais 🥳🥳";
+            launchConfetti();
+        }
+    }, 30);
+});
+
+function launchConfetti() {
+    for (let i = 0; i < 80; i++) {
+        const c = document.createElement("div");
+        c.className = "confetti";
+        c.style.left = Math.random() * window.innerWidth + "px";
+        c.style.background = `hsl(${Math.random()*360},80%,60%)`;
+        document.body.appendChild(c);
+        setTimeout(() => c.remove(), 4000);
+    }
+}
+</script>
