--- a/index.html
+++ b/index.html
@@ -33,30 +33,36 @@ body {
     gap: 20px;
     margin-top: 25px;
     position: relative;
+    align-items: center;
 }
 
 button {
-    padding: 12px 25px;
     border-radius: 30px;
     border: none;
-    font-size: 16px;
     cursor: pointer;
-    transition: transform 0.3s ease;
-    z-index: 1;
+    transition: all 0.3s ease;
 }
 
 #yesBtn {
     background: #8b5e3c;
     color: white;
+    padding: 12px 26px;
+    font-size: 16px;
+    min-width: 90px;
+    z-index: 5;
 }
 
 #noBtn {
     background: #c9a77d;
     color: #5a3e2b;
+    padding: 12px 26px;
+    font-size: 16px;
+    min-width: 90px;
+    z-index: 1;
 }
 
 #vanne {
-    margin-top: 15px;
+    margin-top: 18px;
     font-size: 14px;
     opacity: 0.85;
     min-height: 22px;
@@ -102,7 +108,7 @@ button {
 <img
     id="gorilla"
     src="https://media.tenor.com/4zK7pF1kWk0AAAAC/gorilla-dance.gif"
-    alt="gorille heureux"
+    alt="gorille"
 />
 
 <div class="container">
@@ -120,14 +126,18 @@ button {
 <script>
 const yesBtn = document.getElementById("yesBtn");
 const noBtn = document.getElementById("noBtn");
-const title = document.getElementById("title");
 const vanne = document.getElementById("vanne");
 const loading = document.getElementById("loading");
 const buttons = document.getElementById("buttons");
+const title = document.getElementById("title");
 const gorilla = document.getElementById("gorilla");
 
 let noCount = 0;
-let yesScale = 1;
+
+// tailles de départ
+let yesPadding = 26;
+let yesFont = 16;
+let yesWidth = 90;
 
 const vannes = [
     "Aïe… ça fait mal.",
@@ -144,15 +154,21 @@ noBtn.addEventListener("click", () => {
 
     vanne.textContent = vannes[Math.min(noCount - 1, vannes.length - 1)];
 
-    // Le bouton Oui grossit progressivement
-    yesScale += 0.15;
-    yesBtn.style.transform = `scale(${yesScale})`;
+    // GROSSISSEMENT RÉEL DU BOUTON OUI
+    yesPadding += 6;
+    yesFont += 2;
+    yesWidth += 20;
 
-    // À la dernière vanne : le Oui écrase le Non
+    yesBtn.style.padding = `12px ${yesPadding}px`;
+    yesBtn.style.fontSize = `${yesFont}px`;
+    yesBtn.style.minWidth = `${yesWidth}px`;
+
+    // Dernière étape : le Oui écrase le Non
     if (noCount === vannes.length) {
-        yesBtn.style.zIndex = "10";
-        noBtn.style.zIndex = "1";
-        yesBtn.style.transform = "scale(2.4)";
+        yesBtn.style.minWidth = "100%";
+        yesBtn.style.fontSize = "26px";
+        yesBtn.style.padding = "20px";
+        noBtn.style.opacity = "0";
         vanne.textContent = "Dernière chance avant le malaise.";
     }
 });
@@ -191,3 +207,4 @@ function launchConfetti() {
 
 </body>
 </html>
+
