--- a/index.html
+++ b/index.html
@@ -32,33 +32,25 @@ body {
     justify-content: center;
     gap: 20px;
     margin-top: 25px;
-    position: relative;
-    align-items: center;
 }
 
 button {
+    padding: 12px 26px;
     border-radius: 30px;
     border: none;
+    font-size: 16px;
     cursor: pointer;
-    transition: all 0.3s ease;
 }
 
 #yesBtn {
     background: #8b5e3c;
     color: white;
-    padding: 12px 26px;
-    font-size: 16px;
-    min-width: 90px;
-    z-index: 5;
 }
 
 #noBtn {
     background: #c9a77d;
     color: #5a3e2b;
-    padding: 12px 26px;
-    font-size: 16px;
-    min-width: 90px;
-    z-index: 1;
+    position: absolute;
 }
 
 #vanne {
@@ -77,7 +69,18 @@ button {
     display: none;
 }
 
-/* CONFETTIS */
+/* Image gorille */
+#gorilla {
+    position: fixed;
+    top: 15px;
+    left: 15px;
+    width: 180px;
+    display: none;
+    z-index: 9999;
+    border-radius: 10px;
+}
+
+/* Confettis */
 .confetti {
     position: fixed;
     width: 10px;
@@ -89,17 +92,6 @@ button {
     from { transform: translateY(-10px) rotate(0deg); opacity: 1; }
     to { transform: translateY(100vh) rotate(360deg); opacity: 0; }
 }
-
-/* GIF GORILLE */
-#gorilla {
-    position: fixed;
-    top: 15px;
-    left: 15px;
-    width: 180px;
-    display: none;
-    z-index: 9999;
-    border-radius: 10px;
-}
 </style>
 </head>
 
@@ -107,8 +99,8 @@ button {
 
 <img
     id="gorilla"
-    src="https://media.tenor.com/4zK7pF1kWk0AAAAC/gorilla-dance.gif"
-    alt="gorille"
+    src="cc278a18-d096-4a54-852b-f525b0728083.png"
+    alt="gorille troll"
 />
 
 <div class="container">
@@ -134,44 +126,45 @@ const gorilla = document.getElementById("gorilla");
 
 let noCount = 0;
 
-// tailles de départ
-let yesPadding = 26;
-let yesFont = 16;
-let yesWidth = 90;
-
 const vannes = [
-    "Aïe… ça fait mal.",
-    "Réfléchis bien quand même.",
-    "Vraiment ? Après tout ce qu’on a vécu ?",
-    "C’est presque vexant là.",
-    "Je vais faire comme si j’avais rien vu.",
-    "Ok, je prends note. Très mal.",
-    "Dernière chance avant le malaise."
+    "Aïe… ça pique.",
+    "Tu persistes vraiment ?",
+    "On est encore là-dessus ?",
+    "C’est un peu gênant maintenant.",
+    "Tu fais exprès.",
+    "Je note. Très mal.",
+    "Ok stop. Clique sur Oui."
 ];
 
-noBtn.addEventListener("click", () => {
+// Position initiale du bouton Non (à côté du Oui)
+resetNoPosition();
+
+noBtn.addEventListener("click", (e) => {
+    e.stopPropagation();
     noCount++;
-
     vanne.textContent = vannes[Math.min(noCount - 1, vannes.length - 1)];
-
-    // GROSSISSEMENT RÉEL DU BOUTON OUI
-    yesPadding += 6;
-    yesFont += 2;
-    yesWidth += 20;
-
-    yesBtn.style.padding = `12px ${yesPadding}px`;
-    yesBtn.style.fontSize = `${yesFont}px`;
-    yesBtn.style.minWidth = `${yesWidth}px`;
-
-    // Dernière étape : le Oui écrase le Non
-    if (noCount === vannes.length) {
-        yesBtn.style.minWidth = "100%";
-        yesBtn.style.fontSize = "26px";
-        yesBtn.style.padding = "20px";
-        noBtn.style.opacity = "0";
-        vanne.textContent = "Dernière chance avant le malaise.";
-    }
+    moveNoRandomly();
 });
+
+function resetNoPosition() {
+    noBtn.style.position = "relative";
+    noBtn.style.left = "0";
+    noBtn.style.top = "0";
+}
+
+function moveNoRandomly() {
+    noBtn.style.position = "fixed";
+
+    const padding = 20;
+    const maxX = window.innerWidth - noBtn.offsetWidth - padding;
+    const maxY = window.innerHeight - noBtn.offsetHeight - padding;
+
+    const x = Math.random() * maxX;
+    const y = Math.random() * maxY;
+
+    noBtn.style.left = x + "px";
+    noBtn.style.top = y + "px";
+}
 
 yesBtn.addEventListener("click", () => {
     buttons.style.display = "none";
