--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ button {
 
 <img
     id="gorilla"
-    src="cc278a18-d096-4a54-852b-f525b0728083.png"
-    alt="gorille troll"
+    src="cc278a18-d096-4a54-852b-f525b0728083.jpeg"
+    alt="gorille-drole-tapis-de-souris"
 />
 
 <div class="container">
