--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ body {
     justify-content: center;
     gap: 20px;
     margin-top: 25px;
+    position: relative;
 }
 
 button {
@@ -56,8 +57,8 @@ button {
 #vanne {
     margin-top: 18px;
     font-size: 14px;
-    opacity: 0.85;
-    min-height: 22px;
+    opacity: 0.9;
+    min-height: 24px;
 }
 
 .loading {
@@ -69,18 +70,18 @@ button {
     display: none;
 }
 
-/* Image gorille */
+/* IMAGE GORILLE */
 #gorilla {
     position: fixed;
     top: 15px;
     left: 15px;
-    width: 180px;
+    width: 200px;
     display: none;
     z-index: 9999;
     border-radius: 10px;
 }
 
-/* Confettis */
+/* CONFETTIS */
 .confetti {
     position: fixed;
     width: 10px;
@@ -97,6 +98,7 @@ button {
 
 <body>
 
+<!-- ⚠️ NOM EXACT DU FICHIER -->
 <img
     id="gorilla"
     src="gorille-drole-tapis-de-souris.jpg"
@@ -124,34 +126,35 @@ const buttons = document.getElementById("buttons");
 const title = document.getElementById("title");
 const gorilla = document.getElementById("gorilla");
 
-let noCount = 0;          // compteur invisible
-const MAX_NO_CLICKS = 20;
+let noCount = 0;
+const MAX_CLICKS = 20;
 
 const vannes = [
-    "Aïe… ça pique.",
-    "Tu persistes vraiment ?",
-    "On est encore là-dessus ?",
-    "C’est un peu gênant maintenant.",
-    "Tu fais exprès.",
-    "Je note. Très mal.",
-    "On approche de la fin…",
-    "Toujours pas fatigué ?",
-    "C’est presque impressionnant.",
-    "Ok, respect.",
-    "Vraiment 10 fois ?",
-    "Tu testes ma patience.",
-    "Je commence à juger.",
-    "Ça devient personnel.",
-    "Encore ?",
+    "Aïe…",
     "Toujours pas ?",
-    "Bon…",
-    "Sérieux.",
+    "Tu fais exprès.",
+    "C’est personnel maintenant.",
+    "Tu testes vraiment.",
+    "Je commence à te juger.",
+    "On est à combien là ?",
+    "C’est impressionnant.",
+    "T’es têtu quand même.",
+    "On lâche rien hein.",
+    "Tu veux un record ?",
+    "Même moi je fatigue.",
+    "Tu sais que Oui existe ?",
+    "Regarde le bouton Oui.",
+    "C’est gênant là.",
+    "Je fais semblant de rien.",
+    "Encore ? Sérieux ?",
+    "Ok respect.",
     "Derniers instants.",
-    "Ok c’est fini pour toi."
+    "Bon. Terminé."
 ];
 
-// position initiale correcte
-resetNoPosition();
+// Position initiale à côté de Oui
+noBtn.style.left = "120px";
+noBtn.style.top = "0px";
 
 noBtn.addEventListener("click", (e) => {
     e.stopPropagation();
@@ -159,28 +162,22 @@ noBtn.addEventListener("click", (e) => {
 
     vanne.textContent = vannes[Math.min(noCount - 1, vannes.length - 1)];
 
-    if (noCount >= MAX_NO_CLICKS) {
-        noBtn.style.display = "none";
-        vanne.textContent = "Bon. Le bouton Non a abandonné.";
+    // DISPARITION GARANTIE
+    if (noCount >= MAX_CLICKS) {
+        noBtn.remove();
+        vanne.textContent = "Le bouton Non a officiellement abandonné.";
         return;
     }
 
     moveNoRandomly();
 });
 
-function resetNoPosition() {
-    noBtn.style.position = "relative";
-    noBtn.style.left = "0";
-    noBtn.style.top = "0";
-}
-
 function moveNoRandomly() {
-    noBtn.style.position = "fixed";
-
     const padding = 20;
     const maxX = window.innerWidth - noBtn.offsetWidth - padding;
     const maxY = window.innerHeight - noBtn.offsetHeight - padding;
 
+    noBtn.style.position = "fixed";
     noBtn.style.left = Math.random() * maxX + "px";
     noBtn.style.top = Math.random() * maxY + "px";
 }
@@ -219,3 +216,4 @@ function launchConfetti() {
 
 </body>
 </html>
+
